force-app/main/default/objects/KimbleOne__EventClass__c/KimbleOne__EventClass__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__ConfigGuide</customHelpPage>
    <label>Event Class</label>
    <nameField>
        <label>Event Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Classes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>