force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__CompletionActions__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CompletionActions__c</fullName>
    <label>Completion Actions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>