force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__CompletionMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CompletionMode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Completion Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>EventClassCompletionMode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Event Classes (Completion Mode)</relationshipLabel>
    <relationshipName>EventClassesCompletionMode</relationshipName>
    <type>Lookup</type>
</CustomField>