force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__CreationMode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CreationMode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Creation Mode</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>EventClassCreationMode</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Event Classes (Creation Mode)</relationshipLabel>
    <relationshipName>EventClassesCreationMode</relationshipName>
    <type>Lookup</type>
</CustomField>