force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__EvaluateAsynchronously__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EvaluateAsynchronously__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluate Asynchronously</label>
    <type>Checkbox</type>
</CustomField>