force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__EventData__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventData__c</fullName>
    <label>Event Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>