force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__EventDateFieldName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventDateFieldName__c</fullName>
    <label>Event Date Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>