force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__EventDateOffset__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventDateOffset__c</fullName>
    <label>Event Date Offset</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>