force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__EventName__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventName__c</fullName>
    <label>Event Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>