force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__EventNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EventNarrative__c</fullName>
    <label>Event Narrative</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>