force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__IsEventDateBound__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsEventDateBound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Date Bound?</label>
    <type>Checkbox</type>
</CustomField>