force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__ReportedThroughPath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ReportedThroughPath__c</fullName>
    <label>Reported Through Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>