force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__ScopedWithPath__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ScopedWithPath__c</fullName>
    <label>Scoped With Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>