force-app/main/default/objects/KimbleOne__EventClass__c/fields/KimbleOne__ShowOnTimeline__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowOnTimeline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Timeline?</label>
    <type>Checkbox</type>
</CustomField>