force-app/main/default/objects/KimbleOne__EventClass__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__ObjectType__c</columns>
    <columns>KimbleOne__IsActive__c</columns>
    <columns>KimbleOne__EventName__c</columns>
    <columns>KimbleOne__CompletionActions__c</columns>
    <columns>KimbleOne__EventNarrative__c</columns>
    <columns>KimbleOne__IsEventDateBound__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
    <language>en_US</language>
</ListView>